# UtH-Engine

./: .gitignore  BuildAndroid.bat  CMakeLists.txt  CopyAssets.bat  LICENSE  README.md  UtH-Engine.cppcheck  UtH-Engine.git.kdev4  mac_depencies.sh
TestProject-iOS/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  GameViewController.mm  Info.plist  main.m
TestProject-iOS/Base.lproj/: LaunchScreen.xib  Main.storyboard
TestProject-iOS/Shaders/: Shader.fsh  Shader.vsh
TestProject-iOSTests/: Info.plist  TestProject_iOSTests.m
UtH-Engine.xcodeproj/: project.pbxproj
UtH-Engine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
UtH-Platform/: ReadMe.txt  UtH-Platform.sln  UtH-Platform.vcxproj  UtH-Platform.vcxproj.filters
UtH-Platform/src/: FileReader.cpp
android/: AndroidManifest.xml  android
android/jni/: Android.mk  Application.mk  Platform.mk  TestScene.cpp  TestScene.hpp  main.cpp
android/res/values/: strings.xml
android/res/xml/: app_tracker.xml  ecommerce_tracker.xml  global_tracker.xml
assets/: atlastest.tga  atlastest.xml  fragmentshader.frag  monsu.tga  particle.tga  vertexshader.vert
assets/Maps/: desert.tmx  desert.tsx  test.tmx  tmw_desert_spacing.tga
assets/Shaders/: Default.frag  Default.vert  DefaultText.frag  DefaultText.vert  batchfragmentshader.frag  batchvertexshader.vert  esText.frag  fragmentshader.frag  text.frag  text.vert  vertexshader.vert
ext/UtHMath/include/: Matrix.hpp  Matrix.tpp  Quaternion.hpp  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl
ext/UtHMath/solution/: UtHMath.sln
ext/UtHMath/src/: Quaternion.cpp
ext/include/: README.txt  sndfile.h
ext/include/freetype-gl/: opengl.h
ext/include/pmath/: Constants.hpp  Matrix.hpp  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  PMath.hpp  Quaternion.hpp  Rectangle.hpp  Trigonometry.hpp  Util.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
ext/licenses/: ProbablyMath.license
extlibs/glfw/: .directory
include/UtH/: Scenes.hpp  UtHEngine.hpp
include/UtH/Audio/: Audio.h  Audio.hpp  Sound.h  Sound.hpp  SoundDevice.hpp  SoundManager.h
include/UtH/Core/: Core.hpp  Debug.hpp  Randomizer.hpp  Shader.hpp  Vertex.hpp  VertexBuffer.hpp
include/UtH/Engine/: AnimatedSprite.hpp  Component.hpp  DefaultScene.hpp  Engine.hpp  GameObject.hpp  Layer.hpp  Object.hpp  Rigidbody.hpp  Saveable.hpp  Scene.hpp  SceneManager.h  SceneManager.hpp  SceneManager.inl  Scenes.inl  Sprite.hpp  SpriteBatch.hpp  Text.hpp  Transform.hpp  UtHEngine.h
include/UtH/Math/: Constants.hpp  Math.hpp  Matrix.hpp  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  Rectangle.hpp  Util.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/UtH/Platform/: BinaryData.hpp  Configuration.hpp  Debug.hpp  Enums.hpp  FileManager.hpp  FileReader.h  FileReader.hpp  GooglePlayGameServices.hpp  Graphics.hpp  HiResTimer.hpp  HighResTimer.hpp  Input.hpp  InputEnums.hpp  JavaFunctions.hpp  OGLCheck.hpp  OpenGL.hpp  Platform.hpp  Singleton.hpp  SoundDevice.hpp  Typedefs.hpp  Uncopyable.hpp  Window.hpp  WindowSettings.hpp
include/UtH/Renderer/: Camera.hpp  RenderAttributes.hpp  RenderTarget.hpp  RenderTexture.hpp  Renderer.hpp  SpriteBatch.hpp  Texture.hpp  TextureAtlas.hpp  VertexBuffer.hpp
include/UtH/Resources/: Font.hpp  Image.hpp  Resource.hpp  ResourceManager.h  ResourceManager.hpp  Resources.hpp  Shader.hpp  Sound.hpp  SoundBuffer.hpp  Texture.hpp
src/Audio/: Audio.cpp  Sound.cpp  SoundDevice.cpp  SoundManager.cpp
src/Core/: Randomizer.cpp  Shader.cpp  VertexBuffer.cpp
src/Engine/: AnimatedSprite.cpp  Component.cpp  DefaultScene.cpp  Engine.cpp  GameObject.cpp  Layer.cpp  Object.cpp  PhysicsContactListener.cpp  Randomizer.cpp  Rigidbody.cpp  Scene.cpp  SceneManager.cpp  Sprite.cpp  Sprite.cpp.orig  SpriteBatch.cpp  Text.cpp  Transform.cpp  UtHEngine.cpp
src/Engine/Particles/: Affector.cpp  ParticleSystem.cpp  ParticleTemplate.cpp
src/Engine/Physics/: PhysicsContactListener.cpp  PhysicsWorld.cpp  Rigidbody.cpp
src/Engine/TMX/: Map.cpp  Object.cpp  ObjectGroup.cpp  TMXObject.cpp  Tile.cpp  TileHackBatch.cpp  TileLayer.cpp  Tileset.cpp
src/Math/: Math.cpp  Matrix3.cpp  Matrix4.cpp  Rectangle.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/Platform/: Debug.cpp  FileReader.cpp  Graphics.cpp  HiResTimer.cpp  HighResTimer.cpp  Input.cpp  OGLCheck.cpp  SoundDevice.cpp  Window.cpp
src/Platform/Android/: AndroidWindowImpl.cpp  AndroidWindowImpl.hpp  FileManager.cpp  FileReader.cpp  GooglePlayGameServices.cpp  InputCommon.cpp  InputController.cpp  InputKeyboard.cpp  InputMouse.cpp  InputSensor.cpp  InputTouch.cpp  (+1 more)
src/Renderer/: Camera.cpp  RenderTarget.cpp  RenderTexture.cpp  SpriteBatch.cpp  Texture.cpp  TextureAtlas.cpp  VertexBuffer.cpp
src/Resources/: Font.cpp  Image.cpp  Resource.cpp  ResourceManager.cpp  Shader.cpp  Sound.cpp  SoundBuffer.cpp  Texture.cpp
vs2010/: UtH-Engine.sln
vs2010/AndroidTest/: AndroidTest.vcxproj  AndroidTest.vcxproj.filters
vs2010/Audio/: Audio.vcxproj  Audio.vcxproj.filters
vs2010/Core/: Core.vcxproj  Core.vcxproj.filters
vs2010/Engine/: Engine.vcxproj  Engine.vcxproj.filters
vs2010/Platform/: Platform.vcxproj  Platform.vcxproj.filters
vs2010/Renderer/: Renderer.vcxproj  Renderer.vcxproj.filters
vs2010/Resources/: Resources.vcxproj  Resources.vcxproj.filters
vs2010/TestProject/: TestProject.vcxproj  TestProject.vcxproj.filters  fragmentshader.frag  main.cpp  test.tga  test2.tga  vertexshader.vert
vs2010/UMath/: UMath.vcxproj
vs2013/: UtH-Engine.sln
vs2013/AndroidTest/: AndroidTest.vcxproj  AndroidTest.vcxproj.filters
vs2013/Audio/: Audio.vcxproj  Audio.vcxproj.filters
vs2013/Core/: Core.vcxproj  Core.vcxproj.filters
vs2013/Engine/: Engine.vcxproj  Engine.vcxproj.filters
vs2013/Platform/: Platform.vcxproj  Platform.vcxproj.filters
vs2013/Renderer/: Renderer.vcxproj  Renderer.vcxproj.filters
vs2013/Resources/: Resources.vcxproj  Resources.vcxproj.filters
vs2013/TestProject/: RunCopyAssets.bat  TestProject.vcxproj  TestProject.vcxproj.filters
vs2013/UMath/: UMath.vcxproj  UMath.vcxproj.filters
(+159 files in other folders)
